Fix UI & Create Dark Mode

--- a/src/index.css
+++ b/src/index.css
@@ -8,20 +8,20 @@ body {
 }
 
 .App {
-  background: #75a3fd;
+  background: #99aed8;
   margin: 0px auto;
   width: 80%;
-  max-width:1200px;
+  max-width: 1200px;
 }
 
 .navbar {
   padding: 0px 40px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .navbar h1 {
-  color: #385898;
   font-weight: bold;
   font-style: italic;
   cursor: pointer;
@@ -35,15 +35,14 @@ body {
   padding: 0;
 }
 
-.navbar ul li a {
+.navbar ul li {
   font-size: 20px;
-  text-decoration: none;
-  color: #385898;
   font-weight: bold;
   margin-right: 20px;
+  cursor: pointer;
 }
 
-.navbar ul li a:hover {
+.navbar ul li:hover {
   opacity: 0.6;
 }
 
@@ -64,39 +63,35 @@ body {
 
 .todos li div {
   font-size: 16px;
-  color: navy;
   font-weight: 500;
   letter-spacing: 2px;
 }
 
 .todos li div:hover {
   opacity: 0.7;
-  text-decoration: line-through;
 }
 
-form{
+form {
   align-items: center;
   text-align: center;
-  margin:2rem 0;
+  margin: 2rem 0;
 }
 
-
-input[type="text"]{
-  padding:0.4rem 2rem;
-  width:22rem;
+input[type="text"] {
+  padding: 0.4rem 2rem;
+  width: 22rem;
   height: 3rem;
   font-size: 1.4rem;
-  outline:none;
+  outline: none;
   border: 1px solid #aaaaaa;
   margin-right: 2rem;
   border-radius: 4px;
-  color:navy;
-  box-shadow:5px 5px 5px #aaaaaa;
+  color: navy;
+  box-shadow: 5px 5px 5px #aaaaaa;
 }
 
-
-.hiddenInput{
-  display:none;
+.hiddenInput {
+  display: none;
 }
 
 ::placeholder {
@@ -105,39 +100,53 @@ input[type="text"]{
   font-size: 1.2rem;
 }
 
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
- color: #cccccc;
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #cccccc;
 }
 
-::-ms-input-placeholder { /* Microsoft Edge */
- color: #cccccc;
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: #cccccc;
 }
 
-input[type="submit"]{
+input[type="submit"] {
   text-align: center;
-  color: navy;
   padding: 10px 12px;
   cursor: pointer;
   border-radius: 4px;
   border: 1px solid navy;
   font-weight: bold;
   outline: none;
+  font-size: 1rem;
 }
 
-input[type="submit"]:hover{
-  opacity: 0.7;
-}
-
-.delete-btn {
+.btn {
   text-align: center;
-  color: navy;
   padding: 10px 12px;
   cursor: pointer;
   border-radius: 4px;
-  border: 1px solid navy;
+  border: 1px solid black;
   font-weight: bold;
+  align-items: center;
+  outline: none;
+  font-size: 1rem;
 }
 
-.delete-btn:hover {
+.btn:hover {
   opacity: 0.7;
+}
+
+.btn i {
+  font-size: 1.4rem;
+  margin-right: 5px;
+}
+
+.toggle {
+  text-align: center;
+  padding: 1rem;
+}
+
+.toggle-btn {
+  border: none;
 }
